next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- Fixed Memory Leak with Fribidi Strings (#4188)

- Allow multiple label definitions within a class (RFC 77/#4127)

- shp2img: make it possible to specify layers (with -l option) that match GROUP names.

- reuse a pre-parsed mapfile across fastcgi loops in case the mapfile is
  specified with the MS_MAPFILE env variable. (#4018)

- Ability to do use PropertyIsLike with a column of a different type than text (postgis) (#4176)

- Fixed SLD with FILTER doesn't apply properly to database layers (#4112)

- Fixed lexer buffer size issue with single quotes in a string  (#4175)

- WFS Quote Escape issue (#4087)

- Raster layer fails to be drawn if the window is less than half a pixel (#4172)

- shptree: Improvement to reduce size of .qix files (#4169)

- avoid potential gd fontcache deadlock on fastcgi exit signals(#4093)

- Adjusted WCS GetCapabilities for an empty list of layers (#4140)

- Adjusted WMS GetCapabilities for an empty list of layers (#3755)

- Refactor cgi masperv to not call exit on argument errors (#3099)

- Add --with-apache-module configure option to build an apache dso module
  (#2565)

- Use libtool to build object files and libraries

- Dynamically link libmapserver to the created binaries by default
  (requires the make install step to be run)

- Python mapscript builds with make instead of setuptools

- Fix LABELPNT geomtransform position for non-cached labels (#4121)

- Add RFC80 font fallback support (#4114)

- Added POLAROFFSET style option for a different symbol transform (#4117)

- automatically translate vector symbol points (#4116)

- Add RFC79 Layer masking (#4111)
