@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- Added MS_CJC_* constants in PHP/MapScript (#4183)
+
 - Fixed Memory Leak with Fribidi Strings (#4188)
 
 - Allow multiple label definitions within a class (RFC 77/#4127)
